@@ -3,10 +3,22 @@
  * This file is part of the w64 mingw-runtime package.
  * No warranty is given; refer to the file DISCLAIMER.PD within this package.
  */
+#include <errno.h>
 #include <math.h>
 
 long double
 fdiml (long double x, long double y)
 {
-   return  (isgreater(x, y) ? (x - y) : 0.0L);
+  int cx = fpclassify (x), cy = fpclassify (y);
+  long double r;
+
+  if (cx == FP_NAN || cy == FP_NAN
+      || (y < 0 && cx == FP_INFINITE && cy == FP_INFINITE))
+    return x - y;  /* Take care invalid flag is raised.  */
+  if (x <= y)
+    return 0.0;
+  r = x - y;
+  if (fplclassify (r) == FP_INFINITE)
+    errno = ERANGE;
+  return r;
 }
